--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </form>
     </div>
     <div class="container">
-      <h2>👩‍💻 Speed Typer 👨‍💻</h2>
+      <img src="tapper.png" alt="Tapper Logo" class="logo">
       <small>Type the following:</small>
       <h1 id="word"></h1>
       <input
